# gkp16-graph

./: .gitignore  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test_on_push.yaml
data/: struct.yaml
graph/: GraphBuilder.py
src/graph/: GraphBuilder.py  GraphBuilderException.py  GraphBuilderReturnCode.py
src/yaml_parser/: YamlParser.py  YamlParserReturnCode.py
test/: TestGraphBuilder.py  TestYamlParser.py  test.py
