[metadata]
name = graph_builder
description = company structure graph
author = Glindaqu
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.12

[options]
packages =
    graph
install_requires =
    networkx<=3.1
    pyvis<=0.3.1
    coverage<=7.6.1
    matplotlib<=3.7.5
    pyyaml<=6.0
python_requires = >=3.8
package_dir =
    =src
zip_safe = no